--- a/package.json
+++ b/package.json
@@ -12,15 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.0",
+    "@angular/cdk": "^11.2.0",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/forms": "~11.2.0",
+    "@angular/material": "^11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "github:ngrx/store",
+    "@openzeppelin/contracts": "^3.4.0",
+    "@walletconnect/web3-provider": "^1.3.6",
+    "jquery": "^3.5.1",
+    "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.0.0",
+    "web3": "^1.3.4",
+    "web3modal": "^1.9.3",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
